--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/sccdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+jsondoc.version=1.0
+jsondoc.basePath=http://localhost:8080
+jsondoc.packages[0]=com.scc.backend
