--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,15 +11,40 @@ on:
         - 'backend/**'
 
 jobs:
-  build:
-
+  compile:
     runs-on: ubuntu-latest
+    strategy: 
+      matrix:
+	java: [ 11, 12, 13 ]
+      name: Java ${{ matrix.java }} compile
+      steps:
+	- uses: actions/checkout@master
+	- name: Setup Java
+	  uses: actions/setup-java@v1
+	  with:
+	    java-version: ${{ matrix.java }}
+	- run: mvn -f backend/pom.xml clean compile
 
+  build:
+    runs-on: ubuntu-latest
+    needs: compile
+    name: Build Maven Project
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - uses: actions/checkout@v1
+    - uses cache@v1
+      with:
+	path: ~/.m2/repository
+	key: ${{ runner.os }}-maven-${{ hashFiles(**/pom.xml) }}
+	restore-keys: |
+	 ${{ runner.os }}-maven-
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: ./buildJdk8Project.sh
+        java-version: 11
+    - name: Build and test Spring project
+      run: mvn -f backend/pom.xml clean verify
+    - name: Upload Maven build artifact
+      uses: actions/upload-artifact@v1
+      - with:
+	name: artifact
+	path: backend/target/app.jar
