--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,30 +13,30 @@ on:
 jobs:
   compile:
     runs-on: ubuntu-latest
-    strategy: 
+    strategy:
       matrix:
-	java: [ 11, 12, 13 ]
-      name: Java ${{ matrix.java }} compile
-      steps:
-	- uses: actions/checkout@master
-	- name: Setup Java
-	  uses: actions/setup-java@v1
-	  with:
-	    java-version: ${{ matrix.java }}
-	- run: mvn -f backend/pom.xml clean compile
+        java: [ 11, 12, 13 ]
+    name: Java ${{ matrix.java }} compile
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+      - run: mvn -f backend/pom.xml clean compile
 
   build:
     runs-on: ubuntu-latest
     needs: compile
-    name: Build Maven Project
+    name: Build Maven project
     steps:
     - uses: actions/checkout@v1
-    - uses cache@v1
+    - uses: actions/cache@v1
       with:
-	path: ~/.m2/repository
-	key: ${{ runner.os }}-maven-${{ hashFiles(**/pom.xml) }}
-	restore-keys: |
-	 ${{ runner.os }}-maven-
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -45,6 +45,6 @@ jobs:
       run: mvn -f backend/pom.xml clean verify
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
-      - with:
-	name: artifact
-	path: backend/target/app.jar
+      with:
+       name: artifact
+       path: backend/target/app.jar
