Added 'Run tests' step to workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,8 +41,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build and test Spring project
+    - name: Build Spring project
       run: mvn -f backend/pom.xml clean verify
+    - name: Run tests
+      run: mvn -f backend/pom.xml test
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
