--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,7 @@ name: Build Spring app with Maven
 
 on:
   push:
-    branches: 
-        - master 
-        - 'backend/**'
+    branches: [ master ]
   pull_request:
     branches: 
         - master
@@ -15,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 11, 12, 13 ]
+        java: [ 8, 11 ]
     name: Java ${{ matrix.java }} compile
     steps:
       - uses: actions/checkout@master
