--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,10 +3,14 @@ name: Build Spring app with Maven
 on:
   push:
     branches: [ master ]
+    paths:
+      - "backend/**"
   pull_request:
     branches: 
         - master
         - 'backend/**'
+    paths:
+      - "backend/**"
 
 jobs:
   compile:
