--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
-jsondoc.packages[0]=com.scc.backend
+jsondoc.packages[0]=com.scc.app
