--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,18 +19,37 @@ jobs:
       matrix:
         java: [ 8, 11 ]
     name: Java ${{ matrix.java }} compile
+    env:
+      working_directory: ./backend
     steps:
       - uses: actions/checkout@master
       - name: Setup java
         uses: actions/setup-java@v1
+        env:
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/firebase.json
         with:
           java-version: ${{ matrix.java }}
-      - run: mvn -f backend/pom.xml clean compile
+      - name: Test pathing
+        env:
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/firebase.json
+        run: |
+          echo Paths located url = ${{ env.FIREBASE_DATABASE_URL }} key = ${{ env.FIREBASE_PRIVATE_KEY }}
+        working-directory: ${{env.working_directory}}
+      - name: Compile project
+        env:
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/firebase.json
+        run: mvn clean compile
+        working-directory: ${{env.working_directory}}
 
   build:
     runs-on: ubuntu-latest
     needs: compile
     name: Build Maven project
+    env:
+      working_directory: ./backend
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
@@ -44,11 +63,20 @@ jobs:
       with:
         java-version: 11
     - name: Build Spring project
-      run: mvn -f backend/pom.xml clean verify
+      env:
+        FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+        FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/firebase.json
+      run: mvn clean verify
+      working-directory: ${{ env.working_directory }}
     - name: Run tests
-      run: mvn -f backend/pom.xml test
+      env:
+        FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+        FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/firebase.json
+      run: mvn test
+      working-directory: ${{ env.working_directory }}
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
        name: artifact
-       path: backend/target/app-0.0.1-SNAPSHOT.jar
+       path: ${{env.working_directory}}/target/app-0.0.1-SNAPSHOT.jar
+
