--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,9 +23,14 @@ jobs:
       - uses: actions/checkout@master
       - name: Setup java
         uses: actions/setup-java@v1
+        env:
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          #FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
         with:
           java-version: ${{ matrix.java }}
-      - run: mvn -f backend/pom.xml clean compile
+      - run: |
+          echo "HOME: ${ HOME } GITHUB_WORKSPACE: ${ GITHUB_WORKSPACE }"
+          mvn -f backend/pom.xml clean compile
 
   build:
     runs-on: ubuntu-latest
