--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - run: |
-          echo "home: ${HOME}"
-          echo "workspace: ${ GITHUB_WORKSPACE }"
+          echo "home: ${{ HOME }}"
+          echo "workspace: ${{ GITHUB_WORKSPACE }}"
           mvn -f backend/pom.xml clean compile
 
   build:
