--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
           #FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
         with:
           java-version: ${{ matrix.java }}
-      - run: echo home = ${{ HOME }} workspace = ${{ GITHUB_WORKSPACE }}
+      - run: echo home = ${{ env.HOME }} workspace = ${{ env.GITHUB_WORKSPACE }}
       - run: mvn -f backend/pom.xml clean compile
 
   build:
