--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - name: Test pathing
-        run: echo home = ${{ MAIN_DIR }} workspace = ${{ WORKSPACE }}
+        run: echo Working directory = ${{ env.working-directory }}
         working-directory: ${{env.working-directory}}
       - run: mvn -f backend/pom.xml clean compile
         working-directory: ${{env.working-directory}}
