--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: compile
     name: Build Maven project
+    env:
+      working_directory: ./backend
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
@@ -56,10 +58,12 @@ jobs:
         java-version: 11
     - name: Build Spring project
       run: mvn clean verify
+      working-directory: ${{ env.working_directory }}
     - name: Run tests
       run: mvn test
+      working-directory: ${{ env.working_directory }}
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
        name: artifact
-       path: target/app-0.0.1-SNAPSHOT.jar
+       path: ${{env.working_directory}}/target/app-0.0.1-SNAPSHOT.jar
