--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,8 +31,11 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - name: Test pathing
+        env:
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PRIVATE_KEY: ${{ env.working_directory }}/secrets/google.json
         run: |
-          echo Working directory = ${{ env.working_directory }}
+          echo Paths located url = ${{ env.FIREBASE_DATABASE_URL }} key = ${{ env.FIREBASE_PRIVATE_KEY }}
         working-directory: ${{env.working_directory}}
       - name: Compile project
         run: mvn clean compile
