--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=com.scc.app
+
+token.generator.key=${token.generator}
