--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,4 +13,4 @@ jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=com.scc.app
 
-token.generator.key=${token.generator}
+token.generator.key=${token_generator}
