added map for tokens commented tests

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,6 +110,11 @@
             <version>5.2.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.9</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
