--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,22 @@
+#   Firebase properties
+firebase.databaseUrl=${FIREBASE_DATABASE_URL}
+firebase.privateKeyPath=${FIREBASE_PRIVATE_KEY}
 
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/sccdb
-spring.datasource.username=root
-spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#   JPA properties
+spring.jpa.database=${LOCAL_DATABASE}
+spring.datasource.url=${LOCAL_DATABASE_URL}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+
+spring.datasource.username=${LOCAL_DATABASE_USERNAME}
+spring.datasource.password=${LOCAL_DATABASE_PASSWORD}
+
+spring.jpa.properties.hibernate.dialect=${LOCAL_DATABASE_HIBERNATE_DIALECT}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+token.generator.key=${TOKEN_GENERATOR_KEY}
 
+#   JSONDoc properties
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=com.scc.app
-
-token.generator.key=${token_generator}
-
-firebase.databaseUrl=${FIREBASE_DATABASE_URL}
-firebase.privateKeyPath=${FIREBASE_PRIVATE_KEY}
