Added multiple auth-related modules

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,3 +2,8 @@ rootProject.name='SmartCarCleaner'
 include ':app'
 include ':auth-api'
 include ':auth-ui'
+include ':networking'
+include ':auth-mvp'
+include ':security'
+include ':logging'
+include ':mvp'
