--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,16 +56,20 @@ dependencies {
 
 //    debug + release dependencies
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+//    Project modules
+    implementation project(':mvp')
+    implementation project(':auth-mvp')
 
     //  AndroidAnnotations
-    annotationProcessor "org.androidannotations:androidannotations:" + rootProject.androidAnnotationsVersion
-    implementation "org.androidannotations:androidannotations-api:" + rootProject.androidAnnotationsVersion
+//    annotationProcessor "org.androidannotations:androidannotations:" + rootProject.androidAnnotationsVersion
+//    implementation "org.androidannotations:androidannotations-api:" + rootProject.androidAnnotationsVersion
 
     //  Retrofit
-    implementation "com.squareup.retrofit2:retrofit:" + rootProject.retrofitVersion
+//    implementation "com.squareup.retrofit2:retrofit:" + rootProject.retrofitVersion
 
 //    Unit tests
     testImplementation 'junit:junit:4.13'
