--- a/android/auth-api/build.gradle
+++ b/android/auth-api/build.gradle
@@ -31,8 +31,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
+//    RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+
 //    Retrofit
     implementation "com.squareup.retrofit2:retrofit:" + rootProject.retrofitVersion
+
+//    Gson
+//    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
+//    Project modules
+    implementation project(':networking')
 
 //    Unit tests
     testImplementation 'junit:junit:4.13'
