--- a/android/auth-api/src/main/AndroidManifest.xml
+++ b/android/auth-api/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.scc.auth_api" />
+    package="com.scc.auth_api" >
+    <uses-permission android:name="android.permission.INTERNET"/>
+</manifest>
