--- a/android/auth-mvp/build.gradle
+++ b/android/auth-mvp/build.gradle
@@ -14,14 +14,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["logLevel"          : "TRACE",
-                             "logAppenderConsole": "true",
-                             "library"           : "true"]
-            }
-        }
     }
 
     buildTypes {
@@ -36,18 +28,22 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
-//    AndroidAnnotations
-    annotationProcessor "org.androidannotations:androidannotations:" + rootProject.androidAnnotationsVersion
-    implementation "org.androidannotations:androidannotations-api:" + rootProject.androidAnnotationsVersion
+//    Modules
+    implementation project(":mvp")
+    implementation project(":security")
+    implementation project(":logging")
 
-//    Unit tests
+    implementation project(":auth-api")
+
+//    RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+
     testImplementation 'junit:junit:4.13'
 
-//    Instrumentation tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
