--- a/android/networking/build.gradle
+++ b/android/networking/build.gradle
@@ -14,14 +14,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["logLevel"          : "TRACE",
-                             "logAppenderConsole": "true",
-                             "library"           : "true"]
-            }
-        }
     }
 
     buildTypes {
@@ -36,18 +28,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
-//    AndroidAnnotations
-    annotationProcessor "org.androidannotations:androidannotations:" + rootProject.androidAnnotationsVersion
-    implementation "org.androidannotations:androidannotations-api:" + rootProject.androidAnnotationsVersion
+    implementation project(":security")
 
-//    Unit tests
+//    Retrofit
+    implementation "com.squareup.retrofit2:retrofit:" + rootProject.retrofitVersion
+    implementation 'com.squareup.okhttp3:okhttp:4.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.8.1'
+
     testImplementation 'junit:junit:4.13'
-
-//    Instrumentation tests
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
