--- a/android/auth-mvp/build.gradle
+++ b/android/auth-mvp/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation project(":mvp")
     implementation project(":security")
     implementation project(":logging")
+    implementation project(":networking")
 
     implementation project(":auth-api")
 
@@ -42,8 +43,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
 
+//    Unit tests
     testImplementation 'junit:junit:4.13'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
