--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
+
     defaultConfig {
         applicationId "com.scc.app"
         minSdkVersion 15
@@ -34,6 +35,7 @@ android {
     }
 
     lintOptions {
+        setLintConfig(file("lint.xml"))
         baseline file("lint-baseline.xml")
         warningsAsErrors true
     }
