--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 //    implementation "com.squareup.retrofit2:retrofit:" + rootProject.retrofitVersion
 
 //    Unit tests
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
 
 //    Instrumentation tests
