--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ ext {
     extJUnitVersion = "1.1.2-beta01"
     runnerVersion = "1.3.0-beta01"
     rulesVersion = "1.3.0-beta01"
-    espressoVersion = "3.3.0-beta01"
+    espressoVersion = "3.1.0"
     androidAnnotationsVersion = "4.7.0"
     retrofitVersion = "2.8.1"
 }
