Added Google Maps SDK

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
+//    Google SDKs
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 //    Project modules
     implementation project(':common-exceptions')
     implementation project(':mvp')
